--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <!-- Your own stylesheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/771bac9666234b1b8e50ae14a/ec24de918e2b3b14f90635f6e.js");</script>
   </head>
   <body>
     <div class="container text-center d-flex align-items-center h-100">
